--- a/Lekser/35/test.html
+++ b/Lekser/35/test.html
@@ -13,6 +13,9 @@
         <li>
             <a href="https://www.youtube.com/">YouTube</a>
         </li>
+        <li>
+            <a href="https://afk.itslearning.com/ContentArea/ContentArea.aspx?LocationID=229744&LocationType=1&ElementID=8399262">ItsLearning</a>
+        </li>
     </ul>
 </body>
 </html>
