--- a/Prøvselv_s46.html
+++ b/Prøvselv_s46.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FOTBALL</title>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <style>
         h1 {
             color: whitesmoke;
@@ -12,9 +13,32 @@
             font-size: 40px;
             font-family: Helvetica;
         }
-
-
-
+        h2  {
+            color: lightskyblue;
+            border: 1px solid lightskyblue;
+            border-left: 12px solid lightskyblue;
+            padding-left: 16px;
+            padding-top: 8px;
+            padding-bottom: 8px;
+        }
+        body {
+            font-family: Helvetica;
+            max-width: 970px;
+            margin: auto;
+        }
+    p {
+        line-height: 2;
+    }
+        a{
+            color: white;
+            background-color: midnightblue;
+            padding: 6px;
+            font-family: 'Abril Fatface', cursive;
+        }
+        img {
+            box-shadow: 0 0 40px black;
+            margin-left: 350px;
+        }
 
     </style>
 </head>
@@ -24,7 +48,15 @@
 
     <h1>FOTBALL</h1>
     <h2>Hva er fotball?</h2>
+    <p>Fotball er en ballidrett mellom to lag,
+        hvert bestående av elleve spillere, hvor formålet er å få ballen inn i motstanderlagets mål.
+        Idretten utøves på en rektangulær bane med ett mål i hver kortende, og det laget som har skåret flest mål når spilletiden er ute,
+        vinner kampen. Spilletiden er normalt nitti minutter. Hvis begge lag har skåret like mange mål ved kampens slutt,
+        erklæres kampen for uavgjort eller avgjøres ved ekstraomganger eller straffesparkkonkurranse.</p>
 
+    <a href="https://www.fotball.no/turneringer/">Finn fottballkamper i nærheten av deg</a>
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Soccerball.svg/313px-Soccerball.svg.png" alt="">
 </body>
 </html>
 
