Animasjon innlevering uke 42

--- a/Innlevering animasjon.html
+++ b/Innlevering animasjon.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-<img src="uke35/Animasjon.png"class="baseball">
+<img src="uke35/Innleveringanimasjon-01.png"class="baseball">
 </body>
 </html>
