Innlevering og lekser

--- a/Uke 43/Lekser og innleveringer.html
+++ b/Uke 43/Lekser og innleveringer.html
@@ -33,10 +33,12 @@
         <a href="Sosiale%20medier%20oppg.html">Oppgave 1: sosiale medier</a>
     </li>
     <li>
-        Oppgave 2:
+        <a href="David%20Byrne.html">Oppgave 2: David Byrne</a>
+    </li>
+    <li>
+        <a href="24%20timer%20uten.html">Oppgave 3: 24 timer uten</a>
     </li>
 
-    <li>Oppgave 3:</li>
 
 </nav>
 
